# customer-relationship-management

./: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
agents/: views.py
djcrm/: settings.py  urls.py
docs/: api.md  architecture.md  installation.md
leads/: apps.py  models.py  urls.py  views.py
leads/management/commands/: populate_db.py
leads/migrations/: 0014_create_default_categories.py  0015_alter_agent_id_alter_category_id_alter_followup_id_and_more.py  0016_alter_lead_agent.py
static/css/: dark-theme.css
templates/: base.html  dashboard.html  features.html  home.html  messages.html  navbar.html
templates/agents/: agent_delete.html  agent_detail.html  agent_form.html  agent_list.html
