[tool.black]
line-length = 100
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/docs/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "djcrm.settings"
python_files = ["test_*.py", "*_test.py", "tests.py"]
addopts = "--reuse-db"

[tool.coverage.run]
source = ["."]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/venv/*",
    "manage.py",
    "*/wsgi.py",
    "*/asgi.py",
    "*/settings.py",
    "*/urls.py",
]

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]
skips = ["B311"]  # Skip warning about random number generators

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "djcrm"
version = "1.0.0"
description = "A modern Django CRM system with agent management capabilities"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
maintainers = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = ["django", "crm", "agents", "leads"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/djcrm"
"Bug Tracker" = "https://github.com/yourusername/djcrm/issues"
